--- a/styles/main-page.css
+++ b/styles/main-page.css
@@ -1,4 +1,4 @@
-.container{
+.main-page-container {
     /* Step 1: Set display to grid */
       display:grid;
     width: 1200px;
@@ -12,6 +12,8 @@
       "hd hd hd hd hd hd hd hd"
       "sd main main main main main main main"
       "ft ft ft ft ft ft ft ft";
+
+    
       
   }
  /* .box{
@@ -21,6 +23,7 @@
     */
   .top-bar {
       grid-area:but;
+      display: none;
   }
 
   .top-menu {
@@ -32,18 +35,22 @@
   
   .header{
     grid-area:hd;
-    margin: 10px;
+    margin-left: 0px;
+    margin-right: 20px;
+    margin-bottom: 10px;
     text-align: center;
     font-size: 40px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     border-bottom: dotted black 1px;
+    
   }
  
   .sidebar{
-    grid-area:sd;
+    grid-area: sd;
     margin-right: 20 px;
     list-style-type: none;
     border-right: dotted 1px;
+    background: linear-gradient(to right, lightgrey, transparent 80%);
   }
 
   h1 {
@@ -73,7 +80,7 @@
     
   }
   .content{
-    grid-area:main;
+    grid-area: main;
     margin-left: 40px;
     margin-right: 20px;
     padding-left: 20px;
