--- a/styles/main-page.css
+++ b/styles/main-page.css
@@ -1,127 +1,113 @@
 .main-page-container {
-    /* Step 1: Set display to grid */
-      display:grid;
-    width: 1200px;
-    height: 93vh;
+    display: grid;
+    grid-template-columns: repeat(12, [col-start] 1fr);
+    gap: 15px;
     margin: auto auto;
-   /* Step 2: setup rows amd columns */
-      grid-template-columns: 250px 1fr; 
-      grid-template-rows: 20px 80px auto 15px;
-      grid-template-areas: 
-      "but but but but but but but but"
-      "hd hd hd hd hd hd hd hd"
-      "sd main main main main main main main"
-      "ft ft ft ft ft ft ft ft";
+    background-color: lightgrey;
+  }
 
+  .main-page-container > * {
+    grid-column: col-start / span 12;
+  }
+
+.header h1 {
+    line-height: normal;
+}
+
+.main-navigation {
+    display: flex;
+    flex-direction: column;
+}
+
+.main-navigation ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: flex-end;
+    padding-left: 0;
     
-      
-  }
- /* .box{
-    border: 1px solid rgb(114, 114, 114);
-    background: rgb(226, 226, 226);
-    }
-    */
-  .top-bar {
-      grid-area:but;
-      display: none;
-  }
+}
 
-  .top-menu {
-      grid-area: but;
-     border-bottom: black solid 1px;
-      text-align: right;  
-  }
-      
-  
-  .header{
-    grid-area:hd;
-    margin-left: 0px;
-    margin-right: 20px;
+.main-navigation li {
     margin-bottom: 10px;
-    text-align: center;
-    font-size: 40px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    border-bottom: dotted black 1px;
-    
-  }
- 
-  .sidebar{
-    grid-area: sd;
-    margin-right: 20 px;
-    list-style-type: none;
-    border-right: dotted 1px;
-    background: linear-gradient(to right, lightgrey, transparent 80%);
-  }
-
-  h1 {
-      text-align: left;
-      margin-left: 10px;
-      font-size: 24px;
-      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  }
-
-  .side-menu {
-    margin-left: 10px;
-    padding: 20px 20px;
-    padding-top: 10px;
-    list-style: none;
-    margin-bottom: 0;
-    
-  }
-  
-  .side-menu li {
-    margin-bottom: 10px;
-    padding: 8px;
+    padding: 10px;
     text-align: center;
     background-color: #2c3e50c2;
     border-radius: 5px;
     color: white;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    
-  }
-  .content{
-    grid-area: main;
-    margin-left: 40px;
-    margin-right: 20px;
-    padding-left: 20px;
+    list-style: none;
+}     
+
+.main-navigation h2 {
+    justify-content: start;
+}
+
+.main-navigation a {
+    text-decoration: none;
+    color: white;
+}
+
+.main-content {
     background-image: 
     url(hero-image.jpeg),
-    linear-gradient(to right, white, transparent 50%);
+    linear-gradient(to right, white, transparent 70%);
     background-size: cover;
-    background: background-blend-mode soft-light;
     background-blend-mode: overlay;
-  
-  }
+    min-height: 30vh;
+}
 
-  .text-content {
-      width: 312px;
-      height: 360px;
-      text-align: left;
-      font-size: 18px;
-      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-      margin-left: 40px;
-      margin-top: 35px;
-      
-      
-  }
+.main-content p {
+    text-align: left;
+    font-size: 18px;
+    width: 35%;
+    padding-left: 7%;
+}
 
-  .content a {
-
-    text-decoration-line: solid;
+.main-content a {
+    border: 1px black solid;
+    border-radius: 5px;
+    text-decoration-line: none;
     color: black;
-    font-size: 16px;
-  }
-  .photo-content {
-      width: 600px;
-  }
-  .footer {
-      grid-area: ft;
-      padding-left: 20px;
-      padding-bottom: 1px;
-    border-top: dotted 1px;
-    margin-left: 30px;
-    margin-right: 30px;
-    margin-top: 0;
-    padding-top: 5px;
-  }
+    padding: 5px 10px 5px 10px;
+}
 
+footer {
+    border-top: dotted 1px;
+    padding: 5px 0 10px 15px;
+    margin-top: 10px;
+}
+
+@media (min-width: 500px) {
+
+    .main-content {
+        min-height: 50vh;
+    }
+}
+
+@media (min-width: 900px) {
+    .main-navigation {
+        grid-column: 1 / 3;
+        grid-row: 2;
+        flex-direction: column;
+       
+    }
+
+    .main-navigation ul {
+        flex-direction: column;
+        align-items: center;
+        
+    }
+
+    .main-content {
+        grid-column: 3 / 12;
+        grid-row: 2;
+        min-height: 75vh;
+    }
+}
+
+@media (min-width: 1200px) {
+
+    .main-content {
+        min-height: 75vh;
+    }
+}
