--- a/styles/main-page.css
+++ b/styles/main-page.css
@@ -1,7 +1,7 @@
 .main-page-container {
     display: grid;
     grid-template-columns: repeat(12, [col-start] 1fr);
-    gap: 15px;
+    row-gap: 10px;
     margin: auto auto;
     background-color: lightgrey;
   }
@@ -9,14 +9,10 @@
   .main-page-container > * {
     grid-column: col-start / span 12;
   }
-
-.header h1 {
-    line-height: normal;
-}
-
-.main-navigation {
+  .main-navigation {
     display: flex;
     flex-direction: column;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .main-navigation ul {
@@ -30,7 +26,7 @@
 
 .main-navigation li {
     margin-bottom: 10px;
-    padding: 10px;
+    padding: 5px 15px 5px 15px;
     text-align: center;
     background-color: #2c3e50c2;
     border-radius: 5px;
@@ -54,13 +50,15 @@
     background-size: cover;
     background-blend-mode: overlay;
     min-height: 30vh;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .main-content p {
     text-align: left;
     font-size: 18px;
-    width: 35%;
+    width: 55%;
     padding-left: 7%;
+    margin-top: 7%;
 }
 
 .main-content a {
@@ -71,16 +69,13 @@
     padding: 5px 10px 5px 10px;
 }
 
-footer {
-    border-top: dotted 1px;
-    padding: 5px 0 10px 15px;
-    margin-top: 10px;
-}
-
 @media (min-width: 500px) {
 
     .main-content {
-        min-height: 50vh;
+        min-height: 55vh;
+    }
+    .main-content p {
+        width: 40%;
     }
 }
 
@@ -101,7 +96,7 @@ footer {
     .main-content {
         grid-column: 3 / 12;
         grid-row: 2;
-        min-height: 75vh;
+        min-height: 65vh;
     }
 }
 
