--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,36 @@
 @import "./main-page.css";
 @import "./blog-post.css";
+@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&family=Open+Sans&display=swap');
 
+h1 {
+    font-size: 1.8em;
+    font-family: 'Fjalla One', sans-serif;
+    font-weight: normal;
+}
 
+h2 {
+    font-family: 'Fjalla One', sans-serif;
+    font-size: 1.3em;
+    margin-left: 10px;
+    font-weight: normal;
+    margin-left: 10px;
+
+}
+
+h3 {
+    font-size: 1.2em;
+    font-family: 'Open Sans', sans-serif;
+    text-align: center;
+    width: min-content;
+
+}
+
+footer {
+    border-top: dotted 1px;
+    padding: 5px 0 10px 15px;
+    margin-top: 10px;
+    font-family: 'Open Sans', sans-serif;
+}
       
 
 
