--- a/styles/blog-post.css
+++ b/styles/blog-post.css
@@ -58,7 +58,8 @@
 }
 
 .avatar-layout img {
-    width: 163px;
+    width: 160px;
+    height: 160px;
     border-radius: 50%;
     padding: 15px;
 }
