--- a/styles/main-page.css
+++ b/styles/main-page.css
@@ -4,15 +4,16 @@
     row-gap: 10px;
     margin: auto auto;
     background-color: lightgrey;
-  }
+}
 
-  .main-page-container > * {
+.main-page-container>* {
     grid-column: col-start / span 12;
-  }
-  .main-navigation {
+}
+
+.main-navigation {
     display: flex;
     flex-direction: column;
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Open Sans", sans-serif;
 }
 
 .main-navigation ul {
@@ -21,7 +22,7 @@
     justify-content: space-evenly;
     align-items: flex-end;
     padding-left: 0;
-    
+    margin: 10px 5px 0 5px;
 }
 
 .main-navigation li {
@@ -32,7 +33,7 @@
     border-radius: 5px;
     color: white;
     list-style: none;
-}     
+}
 
 .main-navigation h2 {
     justify-content: start;
@@ -44,13 +45,11 @@
 }
 
 .main-content {
-    background-image: 
-    url(hero-image.jpeg),
-    linear-gradient(to right, white, transparent 70%);
+    background-image: url(hero-image.jpeg), linear-gradient(to right, white, transparent 70%);
     background-size: cover;
     background-blend-mode: overlay;
     min-height: 30vh;
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Open Sans", sans-serif;
 }
 
 .main-content p {
@@ -69,13 +68,32 @@
     padding: 5px 10px 5px 10px;
 }
 
-@media (min-width: 500px) {
+form h4 {
+    margin: 5px 5px 5px 0px;
+    font-size: 0.9em;
+}
 
-    .main-content {
-        min-height: 55vh;
+.newsletter-container {
+    display: flex;
+}
+
+.subscription {
+    margin-right: 10px;
+}
+
+@media (min-width: 500px) {
+    .footer-layout {
+        display: flex;
+        justify-content: space-between;
     }
-    .main-content p {
-        width: 40%;
+    .subscription {
+        display: flex;
+        flex-direction: row;
+        margin-right: 10px;
+    }
+    form h4 {
+        margin: 0px 5px 5px 0px;
+        font-size: 0.9em;
     }
 }
 
@@ -84,24 +102,19 @@
         grid-column: 1 / 3;
         grid-row: 2;
         flex-direction: column;
-       
     }
-
     .main-navigation ul {
         flex-direction: column;
         align-items: center;
-        
     }
-
     .main-content {
-        grid-column: 3 / 12;
-        grid-row: 2;
+        grid-column: 3 / 13;
+        grid-row: 2 / 4;
         min-height: 65vh;
     }
 }
 
 @media (min-width: 1200px) {
-
     .main-content {
         min-height: 75vh;
     }
